// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-smooch-apps  should send back arguments with which mockQuery was called 1`] = `
Array [
  Array [
    Object {
      "ExpressionAttributeNames": Object {
        "#integrationType": "type",
        "#tenantId": "tenant-id",
      },
      "ExpressionAttributeValues": Object {
        ":t": "66d83870-30df-4a3b-8801-59edff162034",
        ":type": "app",
      },
      "IndexName": "tenant-id-type-index",
      "KeyConditionExpression": "#tenantId = :t and #integrationType = :type",
      "TableName": "undefined-undefined-smooch",
    },
  ],
]
`;

exports[`get-smooch-apps  should send back arguments with which validatePlatformPermissions was called 1`] = `
Array [
  Array [
    Object {
      "user-id": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
    Array [
      "PLATFORM_DIGITAL_CHANNELS_APP",
    ],
  ],
]
`;

exports[`get-smooch-apps  should send back arguments with which validateTenantPermissions was called 1`] = `
Array [
  Array [
    "66d83870-30df-4a3b-8801-59edff162034",
    Object {
      "user-id": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
    Array [
      "DIGITAL_CHANNELS_APP_READ",
    ],
  ],
]
`;

exports[`get-smooch-apps  should send back status 200 if the code runs without error  1`] = `
Object {
  "body": Object {
    "result": Array [
      Object {
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
    ],
  },
  "status": 200,
}
`;

exports[`get-smooch-apps should send back a 400 error when there are not enough permissions 1`] = `
Object {
  "body": Object {
    "message": "Error not enough permissions",
  },
  "status": 400,
}
`;

exports[`get-smooch-apps should send back a 500 error when there is a problem fetching apps in DynamoDB 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to fetch apps in DynamoDB",
  },
  "status": 500,
}
`;
